# MkDocs_MiSTer

./: .gitignore  404.html  CONTRIBUTING.md  LICENSE  README.md  feed_json_created.json  feed_json_updated.json  feed_rss_created.xml  feed_rss_updated.xml  index.html  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
advanced/analogcompat/: index.html
advanced/audio/: index.html
advanced/computer/: index.html
advanced/console/: index.html
advanced/crt/: index.html
advanced/crttable/: index.html
advanced/directvideo/: index.html
advanced/diy2parcade/: index.html
advanced/files/: nativeres_console.xlsx  nativeres_utility.xlsx
advanced/ini/: index.html
advanced/lag/: index.html
advanced/mgl/: index.html
advanced/midi/: index.html
advanced/multibutton/: index.html
advanced/nativeres/: index.html
advanced/network/: index.html
advanced/rtc/: index.html
advanced/troubleshooting/: index.html
advanced/videomodes/: index.html
advanced/videoscaling/: index.html
basics/addons/: index.html
basics/bluetooth/: index.html
basics/case/: index.html
basics/cd/: index.html
basics/faq/: index.html
basics/hotkey/: index.html
basics/input/: index.html
basics/keyboard/: index.html
basics/links/: index.html
basics/saves/: index.html
basics/troubleshooting/: index.html
cores/what/: index.html
developer/: corenames.csv  corerepos.xlsx
docs/: editing.md  index.md
editing/: index.html
overrides/: base.html
search/: search_index.json
stylesheets/: extra.css
(+128 files in other folders)
