[project]
name = "Mkdocs-MiSTer"
version = "0.1.0"
description = "MiSTer FPGA Documentation built in Material for MkDocs"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ffc-mkdocs-video>=1.0.1",
    "mkdocs-git-revision-date-localized-plugin>=1.5.0",
    "mkdocs-material[imaging]>=9.7.0",
    "mkdocs-material-extensions>=1.3.1",
    "mkdocs-minify-plugin>=0.8.0",
    "mkdocs-redirects>=1.2.2",
    "mkdocs-rss-plugin>=1.17.7",
    "click<8.3.0",
]

[tool.uv]
package = false

[project.scripts]
serve = "uv run mkdocs serve --watch docs"

